<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/llMainBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_easy"/>

    <TextView
        android:id="@+id/textView"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/ibm_plex_sans_semibold"
        android:text="@string/multiply"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/llPopupBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llPopupBackground"
        style="@style/popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/llLevels"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/llPopupHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <HorizontalScrollView
                    android:id="@+id/ll"
                    android:scrollbarThumbHorizontal="@null"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    >
                    <LinearLayout
                        android:id="@+id/llPopupHeaderContent"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/tvPopupHeader1"
                            style="@style/text"
                            android:paddingEnd="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ibm_plex_sans_semibold"
                            android:text="@string/level_1"
                            android:textSize="22sp"
                            />
                        <TextView
                            android:id="@+id/tvPopupHeader2"
                            style="@style/text"
                            android:paddingEnd="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ibm_plex_sans_semibold"
                            android:text="@string/level_2"
                            android:textSize="22sp"
                            />
                        <TextView
                            android:id="@+id/tvPopupHeader3"
                            style="@style/text"
                            android:paddingEnd="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ibm_plex_sans_semibold"
                            android:text="@string/level_3"
                            android:textSize="22sp"
                            />
                    </LinearLayout>
                </HorizontalScrollView>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/ll"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/tvPopupTimeHeader"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/time"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llPopupHeader" />

            <TextView
                android:id="@+id/tvPopupTime"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:text="15 сек."
                android:textColor="@color/easy"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/tvPopupTimeHeader"
                app:layout_constraintTop_toBottomOf="@+id/llPopupHeader"
                tools:ignore="HardcodedText,TextContrastCheck" />

            <TextView
                android:id="@+id/tvPopupTasksHeader"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/tasks"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPopupTimeHeader" />

            <TextView
                android:id="@+id/tvPopupTasks"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="8"
                android:textColor="@color/easy"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/tvPopupTasksHeader"
                app:layout_constraintTop_toBottomOf="@+id/tvPopupTimeHeader"
                tools:ignore="HardcodedText,TextContrastCheck" />

            <TextView
                android:id="@+id/tvPopupDifficultHeader"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/difficult"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPopupTasksHeader" />

            <TextView
                android:id="@+id/tvPopupDifficult"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/difficult_easy"
                android:textColor="@color/easy"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/tvPopupDifficultHeader"
                app:layout_constraintTop_toBottomOf="@+id/tvPopupTasksHeader"
                tools:ignore="TextContrastCheck" />

            <LinearLayout
                android:id="@+id/llStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/item_easy"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:minHeight="48dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPopupDifficultHeader">

                <TextView
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="35dp"
                    android:layout_marginVertical="12dp"
                    android:text="@string/start"
                    android:textColor="@color/easy_secondary"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvBackMain"
        style="@style/textBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:elevation="15dp"
        android:text="@string/back"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>